samples/_failures_safe/1761254781_97da1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b28f609.c: In function ‘main’:
./samples/SAFE/__tmp_4b28f609.c:206:12: error: missing terminating " character
  206 |     printf("Tokens found:\
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4b28f609.c:206:5: error: expected expression at end of input
  206 |     printf("Tokens found:\
      |     ^~~~~~
./samples/SAFE/__tmp_4b28f609.c:206:5: error: expected declaration or statement at end of input
